--- a/custom_auth/templates/emails/email_base.html
+++ b/custom_auth/templates/emails/email_base.html
@@ -4,7 +4,7 @@
     <span style="font-size: 1.5rem; color: #666; ">Jacobs Alumni Association</span>
 </div>
 
-<div>
+<div style="font-family:Arial; font-size:14.6667px;">
     {% block content %}
     {% endblock %}
 </div>
