--- a/registry/templates/admin/alumni/alumni/change_form.html
+++ b/registry/templates/admin/alumni/alumni/change_form.html
@@ -2,6 +2,9 @@
 {% load i18n admin_urls %}
 
 {% block object-tools-items %}
+    <li>
+        <a href="{% url 'approval_approval' id=original.profile.id %}" target="_blank">Manage Approval</a>
+    </li>
     {% if original.payment and original.payment.customer %}
         <li>
             <a href="https://dashboard.stripe.com/{% if stripe_test_mode %}test/{% endif%}customers/{{ original.payment.customer }}" target="_blank">View on Stripe Dashboard</a>
