--- a/registry/templates/approval/index.html
+++ b/registry/templates/approval/index.html
@@ -8,12 +8,95 @@
         User Approval {{ alumni.profile.username }}
     </h1>
    
-    <p>
-        {% if alumni.approval.approval %}
-            User is already approved -- nothing to do
-        {% else %}
-            User approval tbd
-        {% endif %}
-    </p>
+    <div class="uk-tile uk-tile-default">
+        <p class="uk-h4">Personal Data</p>
+
+        <table class="uk-table uk-table-striped">
+            <tbody>
+                <tr>
+                    <td>Name</td>
+                    <td>
+                        {{ alumni.fullName }}
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>Username</td>
+                    <td>
+                        {{ alumni.profile.username }}
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div class="uk-tile uk-tile-default">
+        <p class="uk-h4">Application Status</p>
+
+        <table class="uk-table uk-table-striped">
+            <tbody>
+                <tr>
+                    <td>Application Completed</td>
+                    <td>
+                        {% if alumni.setup_completed %}
+                            <span class="uk-label uk-label-success">Yes</span>
+                        {% else %}
+                            <span class="uk-label uk-label-warning">No</span>
+                        {% endif %}
+                    </td>
+                </tr>
+    
+                <tr>
+                    <td>Application Approved</td>
+                    <td>
+                        {% if alumni.approval.approval %}
+                            <span class="uk-label uk-label-success">Yes</span>
+                        {% else %}
+                            <span class="uk-label uk-label-danger">No</span>
+                        {% endif %}
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div class="uk-tile uk-tile-default">
+            <p class="uk-h4">GSuite Status</p>
+    
+            <table class="uk-table uk-table-striped">
+                <tbody>
+                    <tr>
+                        <td>Assigned E-Mail</td>
+                        <td>
+                            {% if alumni.approval.gsuite %}
+                                <span style='color: green; '>{{alumni.approval.gsuite}}</span>
+                            {% else %}
+                            {% endif %}
+
+                            {% if emailLinked %}
+                                <span class="uk-label uk-label-success">Account Linked</span>
+                            {% else %}
+                                <span class="uk-label uk-label-danger">Unlinked</span>
+                            {% endif %}
+                        </td>
+                    </tr>
+        
+                    <tr>
+                        <td>Previous E-Mail</td>
+                        <td>
+                            {% if alumni.existingEmail %}
+                                {{alumni.existingEmail}}
+                            {% else %}
+                                (none listed)
+                            {% endif %}
+
+                            {% if previousEmail %}
+                                <span class="uk-label uk-label-warning">{{previousEmail}}</span>
+                            {% endif %}
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
 </article>
 {% endblock %}
