Rename Alumni Map -> Map & Search

--- a/registry/templates/map/index.html
+++ b/registry/templates/map/index.html
@@ -2,7 +2,7 @@
 
 {% load registry_display %}
 
-{% block title %}Map Search{% endblock %}
+{% block title %}Map &amp; Search{% endblock %}
 
 
 {% block head %}
@@ -19,7 +19,7 @@
 {% block content %}
 <article class="uk-article">
     <h1 class="uk-article-title">
-        Jacobs Alumni Map Search
+        Jacobs Alumni Map &amp; Search
     </h1>
 
     {% include "map/search_form.html" %}
