--- a/registry/templates/base/header.html
+++ b/registry/templates/base/header.html
@@ -18,7 +18,7 @@
       <div class="uk-navbar-right">
         <ul class="uk-navbar-nav uk-visible@l">
             <li><a class="uk-active" href="/">Home</a></li>
-            {% if can_view_map %}<li><a href="{% url 'map_home' %}">Map</a></li>{% endif %}
+            {% if can_view_map %}<li><a href="{% url 'map_home' %}">Map &amp; Search</a></li>{% endif %}
             {% if not user.is_authenticated %}<li><a class="uk-active" href="{% url 'login' %}">Login</a></li>{% endif %}
             {% if user.is_staff %}<li><a class="uk-active" href="{% url 'admin:index' %}">Django Admin</a></li>{% endif %}
         </ul>
