Improve map & search

--- a/registry/templates/map/search.html
+++ b/registry/templates/map/search.html
@@ -39,7 +39,7 @@
             
                             {{ alumni.jacobs|get_choice_field:"graduation"|safe }}
                         </td>
-                        <td> {{ alumni.address.city }} </td>
+                        <td> {{ alumni.address.city }}, {{ alumni.address.country }} </td>
                     </tr>
                 {% endfor %}
                 </tbody>
