--- a/atlas/templates/atlas/search_form.html
+++ b/atlas/templates/atlas/search_form.html
@@ -1,5 +1,5 @@
 <p class="uk-article-lead">
-    <form action="{% url 'map_search' %}" method="GET" id="searchForm">
+    <form action="{% url 'atlas_search' %}" method="GET" id="searchForm">
         <div uk-grid>
 
             <div class="uk-width-expand">
