Add AtlasSettings model
This commit adds a new AtlasSettings model that can be configured by the
user to contain unified atlas settings

--- a/registry/templates/portal/index.html
+++ b/registry/templates/portal/index.html
@@ -22,14 +22,14 @@
             {% include "portal/parts/general.html" %}
         </div>
         <div class="uk-width-1-2">
-            {% include "portal/parts/account.html" %}
+            {% include "portal/parts/atlas.html" %}
         </div>
 
         <div class="uk-width-1-2">
-            {% include "portal/parts/address.html" %}
+            {% include "portal/parts/account.html" %}
         </div>
         <div class="uk-width-1-2">
-            {% include "portal/parts/payment.html" %}
+            {% include "portal/parts/address.html" %}
         </div>
 
         <div class="uk-width-1-2">
@@ -45,6 +45,10 @@
         </div>
         <div class="uk-width-1-2">
             {% include "portal/parts/skills.html" %}
+        </div>
+
+        <div class="uk-width-1-2">
+            {% include "portal/parts/payment.html" %}
         </div>
     </div>
 
