Move admin panel around

--- a/registry/templates/portal/index.html
+++ b/registry/templates/portal/index.html
@@ -22,31 +22,32 @@
             {% include "portal/parts/general.html" %}
         </div>
         <div class="uk-width-1-2">
-            {% include "portal/parts/atlas.html" %}
+            <div>
+                {% include "portal/parts/account.html" %}
+            </div>
+            <br /><br />
+            <div>
+                {% include "portal/parts/atlas.html" %}
+            </div>
         </div>
 
-        <div class="uk-width-1-2">
-            {% include "portal/parts/account.html" %}
-        </div>
         <div class="uk-width-1-2">
             {% include "portal/parts/address.html" %}
         </div>
-
         <div class="uk-width-1-2">
             {% include "portal/parts/jacobs.html" %}
         </div>
+
         <div class="uk-width-1-2">
             {% include "portal/parts/social.html" %}
         </div>
-
-
         <div class="uk-width-1-2">
             {% include "portal/parts/job.html" %}
         </div>
+
         <div class="uk-width-1-2">
             {% include "portal/parts/skills.html" %}
         </div>
-
         <div class="uk-width-1-2">
             {% include "portal/parts/payment.html" %}
         </div>
