--- a/registry/templates/base/footer.html
+++ b/registry/templates/base/footer.html
@@ -50,7 +50,7 @@
    </div>
    <div class="copyright uk-text-small">
       <p>
-          Copyright © 2017-18 Jacobs University Alumni Association. All Rights Reserved. <br>
+          Copyright © 2017-{% now "y" %} Jacobs University Alumni Association. All Rights Reserved. <br>
           <a href="{% url 'privacy' %}">Datenschutzerklärung / Privacy Policy</a> <a href="{% url 'imprint' %}">Impressum / Imprint</a></p>
    </div>
 </footer>
