Do not hard-code /login/ and /register/ urls
Previously, the /login/ and /register/ urls were hard-coded within the
registry template. This commit removes the hard-coding and changes it to
using the 'url' filter.

--- a/registry/templates/registry/index.html
+++ b/registry/templates/registry/index.html
@@ -19,11 +19,11 @@
         </p>
 
         <div class="uk-margin uk-button-group">
-            <a href="/register/" class="uk-button uk-button-primary">
+            <a href="{% url 'register' %}" class="uk-button uk-button-primary">
                 Register
             </a>
 
-            <a href="/login/" class="uk-button uk-button-secondary">
+            <a href="{% url 'login' %}" class="uk-button uk-button-secondary">
                 Login
             </a>
         </div>
