Minor template fixes

--- a/MemberManagement/templates/base/devel.html
+++ b/MemberManagement/templates/base/devel.html
@@ -1,6 +1,6 @@
 {% if show_devel_warning %}
     <div>
-        <div class="uk-alert-danger" uk-alert class="uk-width-1-1">
+        <div class="uk-alert-danger uk-width-1-1" uk-alert>
             <p>Testing site do not use for real world purposes. </p>
         </div>
     </div>
