--- a/MemberManagement/templates/base/header.html
+++ b/MemberManagement/templates/base/header.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 <header class="uk-sticky uk-sticky-fixed uk-width-1-1" style="position: fixed; top: 0; width: 100%; ">
   <div class="uk-navbar-container navbar uk-dark">
-    <nav class="uk-navbar" {% if show_devel_warning %}style="background-color: #fef4f6; "{% endif %}">
+    <nav class="uk-navbar" {% if show_devel_warning %}style="background-color: #fef4f6; "{% endif %}>
       <div class="uk-navbar-left">
         <a href="{% url 'portal' %}" class="uk-navbar-item uk-logo">
           <span class="logo-button uk-margin-small-right">
