--- a/MemberManagement/templates/base/base.html
+++ b/MemberManagement/templates/base/base.html
@@ -1,34 +1,34 @@
 {% load static %}
 {% load cookielaw_tags %}
-
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
-    <meta charset="utf-8" />
-    <title>{% block title %}{% endblock %} - Membership Portal - Jacobs University Bremen Alumni</title>
+        <meta charset="utf-8" />
+        <title>{% block title %}{% endblock %} - Membership Portal - Jacobs University Bremen Alumni</title>
 
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta http-equiv="Content-Language" content="en" />
-    <meta name="viewport" content="width=device-width" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta http-equiv="Content-Language" content="en" />
+        <meta name="viewport" content="width=device-width" />
 
-    <meta name="description" content="The Jacobs Alumni Association is the growing network of former Jacobs University students and friends." />
-    <meta name="keywords" content="Jacobs Alumni Association, Jacobs University Bremen, Jacobs University, Alumni Association, Jacobs, Alumni, Association, Bremen" />
+        <meta name="description" content="The Jacobs Alumni Association is the growing network of former Jacobs University students and friends." />
+        <meta name="keywords" content="Jacobs Alumni Association, Jacobs University Bremen, Jacobs University, Alumni Association, Jacobs, Alumni, Association, Bremen" />
 
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&amp;subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet" />
-    <link href="{% static "uikit/css/style.css" %}" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&amp;subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet" />
+        <link href="{% static "uikit/css/style.css" %}" rel="stylesheet" />
 
-    {% if google_analytics_id %}
-    <script async src="https://www.googletagmanager.com/gtag/js?id={{google_analytics_id}}"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
+        {% if google_analytics_id %}
+        <script async src="https://www.googletagmanager.com/gtag/js?id={{google_analytics_id}}"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
 
-        gtag('config', '{{google_analytics_id}}');
-    </script>
-    {% endif %}
+            gtag('config', '{{google_analytics_id}}');
+        </script>
+        {% endif %}
 
-    {% block head %}
-    {% endblock %}
+        {% block head %}
+        {% endblock %}
     </head>
     <body {% block bodyattr %}{% endblock %}>
         <div class="fill uk-offcanvas-content">
