Add a new setupcompleted component
This commit ads a new setupcompleted component that marks when the
initial setup was completed. By default, this is estimate using the
profile creation time. An additional manage.py task exists to update it
using the stripe customer creation time.

--- a/registry/templates/setup/setup.html
+++ b/registry/templates/setup/setup.html
@@ -12,6 +12,8 @@
         {% endif %}
     </h1>
 
+    {% block extracontent %}{% endblock %}
+
     <div>
         <form class="uk-form-horizontal" method="POST">
             {% csrf_token %}
